115-pihole/03-pihole-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
        name: pihole
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            preference:
              matchExpressions:
              - key : instanceType
                operator: In
                values:
                - a4.medium
      containers:
      - name: pihole
        #image: pihole/pihole:4.3.2-1
        image: pihole/pihole:v4.4
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "200Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu : "250m"
        ports:
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        - containerPort: 80
          name: http
          protocol: TCP
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
#        livenessProbe:
#          httpGet:
#            path: /index.php
#            port: 80
#          initialDelaySeconds: 60
#          periodSeconds: 10
#          timeoutSeconds: 2
#          failureThreshold: 3
#        readinessProbe:
#          httpGet:
#            path: /index.php
#            port: 80
#          initialDelaySeconds: 25
#          periodSeconds: 10
#          timeoutSeconds: 2
#          failureThreshold: 3
        volumeMounts:
        - name: pihole-etc-volume
          mountPath: "/etc/pihole"
        - name: pihole-dnsmasq-volume
          mountPath: "/etc/dnsmasq.d"
      - name: unbound
        image: klutchell/unbound:1.9.3
        resources:
          requests:
            cpu: "100m"
            memory: "20Mi"
          limits:
            cpu: "200m"
            memory: "40Mi"
        ports: 
        - containerPort: 5353
          protocol: TCP
          name: unbound-tcp
        - containerPort: 5353
          protocol: UDP
          name: unbound-udp
        volumeMounts:
          - name: config-unbound
            mountPath: /opt/unbound/etc
#        livenessProbe:
#          exec:
#            command:
#              - "nslookup -port=5353"
#              - "health.check.unbound"
#              - "127.0.0.1"
#          initialDelaySeconds: 30
#          periodSeconds: 10
#          timeoutSeconds: 2
#        readinessProbe:
#          exec:
#            command:
#              - "nslookup -port=5353"
#              - "health.check.unbound"
#              - "127.0.0.1"
#          initialDelaySeconds: 25
#          periodSeconds: 10
      volumes:
      - name: pihole-etc-volume
        persistentVolumeClaim:
          claimName: pihole-etc-claim
      - name: pihole-dnsmasq-volume
        persistentVolumeClaim:
          claimName: pihole-dnsmasq-claim
      - name: config-unbound
        persistentVolumeClaim:
          claimName: pihole-unbound-conf-claim
