115-pihole/04-pihole-service-udp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: metallb-pihole-key 
spec:
  selector:
    app: pihole
  ports:
  - port: 53
    targetPort: 53
    protocol: UDP
    name: dns-udp
  type: LoadBalancer
  loadBalancerIP: 192.168.0.69
