115-pihole/04-pihole-service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
spec:
  selector:
    app: pihole
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
    name: http
